# DevNest

./: .env.example  .gitignore  .prettierignore  README.md  ToDo  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/codebase/: README.md  adding-a-panel.md  backend.md  frontend.md  ipc.md
docs/plans/: 01-high-level-plan.md  02-low-level-todo.md  README.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: commands.rs  db.rs  devices.rs  docker.rs  error.rs  git.rs  github.rs  http_client.rs  lib.rs  local_fs.rs  log_stream.rs  main.rs  metrics.rs  ngrok.rs  secrets.rs  sftp.rs  sql.rs  ssh.rs  ssh_tunnel.rs  state.rs  systemd.rs  tailscale.rs  terminal.rs  terminal_commands.rs
src/app/: App.tsx  use-device-heartbeat.ts
src/components/: AddDeviceDialog.tsx  CodeEditor.tsx  CommandPalette.tsx  ConfirmDialog.tsx  MainPanel.tsx  Modal.tsx  PaneTile.tsx  ResizableColumns.tsx  Sidebar.tsx  Skeleton.tsx  StatusBar.tsx  SudoPasswordDialog.tsx  TabBar.tsx  ThemeToggle.tsx  TitleBar.tsx  Toast.tsx
src/lib/: api.ts  device-icon.ts  fuzzy.ts  monaco-setup.ts  notify.ts  theme-templates.ts  unit-highlight.tsx  with-sudo.ts  workspace-names.ts
src/panels/: CronPanel.tsx  DashboardPanel.tsx  DockerPanel.tsx  EditorPanel.tsx  FileBrowserPanel.tsx  GitGraphPanel.tsx  GitPanel.tsx  HttpPanel.tsx  LogViewerPanel.tsx  MetricsPanel.tsx  NgrokPanel.tsx  PortsPanel.tsx  ProcessPanel.tsx  ServicesPanel.tsx  SettingsPanel.tsx  SqlPanel.tsx  SysInfoPanel.tsx  SystemdPanel.tsx  TailscalePanel.tsx  TerminalPanel.tsx
src/store/: app-store.test.ts  app-store.ts  colors-store.ts  http-store.ts  palette-store.ts  pane-settings-store.ts  recents-store.ts  services-store.ts  shortcuts-store.ts  sql-store.ts  sudo-store.ts  theme-store.ts  ui-store.ts
